carousel fixed, z-index was messing correct routing

--- a/StirCraftApp.ClientApp/src/app/shared/components/carousel/carousel.component.scss
+++ b/StirCraftApp.ClientApp/src/app/shared/components/carousel/carousel.component.scss
@@ -15,10 +15,14 @@
     background-position: center;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+    pointer-events: none;
+    z-index: 1;
   }
   
   .carousel-slide.active {
     opacity: 1;
+    pointer-events: auto;
+    z-index: 2; 
   }
   
   .carousel-caption {
